# graft

./: .gitignore  README.md  cylinder_plotting.py  logging_configuration.py  main.py  pyproject.toml  requirements-dev.txt
bug-tracking/: dependency_graph_nodes_overlapping.md  multi_line_descriptions_in_search_table.md  prioritising_tasks_with_no_downstream_importance.md  too_much_empty_space_between_graph_components.md  transpose-does-nothing.md  user_entered_info_may_not_save_properly.md
bug-tracking/add-hierarchy-not-show-start-task/: add_hierarchy_not_show_start_task.md
bug-tracking/task-name-and-description-none-not-behaving/: task_name_and_description_none_not_behaving.md
bug-tracking/tasks_overlaping_in_network/: task_attributes_register.txt  task_dependency_graph.txt  task_hierarchy_graph.txt  tasks_overlapping_in_network_diagram.md
bug-tracking/two-task-graph-circle/: two_task_graph_circle.md
graft/: __init__.py  acyclic_digraph.py  app.py  app_name.py  cli_app.py  constrained_graph.py  draw.py  duration.py  graft.py  gui_app.py  io.py  logging_configuration.py  priority.py  progress.py  ranking_algorithm.py  task_attributes.py  task_network.py  task_tag_table.py  utils.py  version.py
graft/architecture/: __init__.py  data.py  logic.py  presentation.py
graft/cli/: main.py  tag.py  task.py
graft/cli/event/: due.py  event.py  update.py
graft/cli/task/: dependency.py  hierarchy.py  task.py  update.py
graft/domain/: __init__.py  links.py  priority_order.py  system.py  task_event_dependency_register.py
graft/domain/event/: __init__.py  attributes.py  attributes_register.py  description.py  event.py  name.py  register.py  uid.py
graft/domain/events/: __init__.py  attributes.py  attributes_register.py  description.py  name.py  uid.py
graft/domain/task/: __init__.py  attributes.py  dependencies.py  (+12 more)
graft/engine/: __init__.py
graft/graph/: __init__.py  acyclic_digraph.py  bidict.py  bidirectional_multidict.py  digraph.py  directed_acyclic_graph.py  minimum_dag.py  simple_digraph.py
graft/graphs/: __init__.py  acyclic_digraph.py  bidict.py  directed_acyclic_graph.py  directed_graph.py  directed_graph_builder.py  minimum_dag.py  reduced_dag.py  reduced_directed_acyclic_graph.py  simple_digraph.py  simple_directed_graph.py
graft/graphs2/: bidict.py
graft/local_file/: __init__.py  decoder.py  encoder.py  local_file.py
graft/mvc/: __init__.py  model_controller.py  mvc.py  view_controller.py
graft/objects/: event.py  event_task_due_table.py  graph.py  task.py
graft/standard/: __init__.py  event.py  standard.py
graft/tkinter_gui/: __init__.py  custom_events.py  demo.py  event_broker.py  failed_operation_window.py  gui.py  system_update_dispatcher.py  tabs.py  task_details.py  unknown_exception_failed_operation_window.py
graft/typer_cli/: __init__.py  global_logic_layer.py  logic_layer.py  typer_cli.py
tests/: conftest.py  test_constrained_graph.py  test_create_dependency.py  test_create_hierarchy.py  test_create_task.py  test_delete_dependency.py  test_delete_hierarchy.py  test_delete_task.py  test_duration.py  test_priority.py  test_standard_logic_layer.py  test_task_network.py  test_update_task_description.py  test_update_task_importance.py  test_update_task_name.py  test_update_task_progress.py
tests/task_attributes/: test_progress.py
tests/task_network/: conftest.py  test_add_dependency.py  test_add_hierarchy.py  test_add_task.py  test_remove_dependency.py  test_remove_hierarchy.py  test_remove_task.py  test_set_due_datetime.py  test_set_priority.py  test_set_start_datetime.py
(+390 files in other folders)
