[tool.poetry]
name = "graft"
version = "0.1.0"
description = ""
authors = ["Matt Woolley <matt.wool@live.com.au>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.12, < 3.14"
networkx = "^3.2.1"
matplotlib = "^3.8.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pylint = "^3.0.2"
autoflake = "^2.2.1"
pydocstringformatter = "^0.7.3"
vulture = "^2.10"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
pyright = "^1.1.372"
pyinstaller = "^6.10.0"

[tool.ruff]
line-length = 88
select = ["ALL"]
ignore = [
    "E203",
    "D203",
    "D213",
    "ANN101",
    "ANN102",
    "COM812",
    "ISC001",
    "FA102",
    "PYI025",
]
ignore-init-module-imports = true
show-fixes = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.autoflake]
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
in-place = true

[tool.pydocstringformatter]
write = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
