[tool.poetry]
name = "graft"
version = "0.1.0"
description = ""
authors = ["Matt Woolley <matt.wool@live.com.au>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.12, < 3.14"
networkx = "^3"
matplotlib = "^3"

[tool.poetry.group.dev.dependencies]
ruff = "^0"
pylint = "^3"
autoflake = "^2"
pydocstringformatter = "^0"
vulture = "^2"
pytest = "^7"
pytest-mock = "^3"
pytest-cov = "^4"
pyright = "^1"
pyinstaller = "^6"

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E203",
    "D203",
    "D213",
    "COM812",
    "ISC001",
    "FA102",
    "PYI025",
    "TRY400",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]
"graft/*" = ["PT017"]

[tool.autoflake]
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
in-place = true

[tool.pydocstringformatter]
write = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
