[project]
name = "graft"
version = "0.1.0"
description = ""
authors = [{ name = "Matt Woolley", email = "matt.wool@live.com.au" }]
requires-python = ">= 3.12, < 3.14"
readme = "README.md"
license = "GNU GENERAL PUBLIC LICENSE"
dependencies = ["networkx>=3,<4", "matplotlib>=3,<4"]

[dependency-groups]
dev = [
    "ruff>=0,<1",
    "pylint>=3,<4",
    "autoflake>=2,<3",
    "pydocstringformatter>=0,<1",
    "vulture>=2,<3",
    "pytest>=7,<8",
    "pytest-mock>=3,<4",
    "pytest-cov>=4,<5",
    "pyright>=1,<2",
    "pyinstaller>=6,<7",
]

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E203",
    "D203",
    "D213",
    "COM812",
    "ISC001",
    "FA102",
    "PYI025",
    "TRY400",
    "LOG014",
    "TD002",
    "TD003",
    "FIX002",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]
"graft/*" = ["PT017"]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.autoflake]
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
in-place = true

[tool.pydocstringformatter]
write = true
